:curry: Fixed spacing issue with icon on main-menu input checkbox toggle.

--- a/sass/partials/components/_main-menu.scss
+++ b/sass/partials/components/_main-menu.scss
@@ -259,10 +259,7 @@
 
     @include breakpoint($main-menu-full) {
       display: inline-block;
-    }
-    @include breakpoint($main-menu-med) {
-      display: inline-block;
-      margin: 0 $space-half 0 0
+      margin: 0 $space-half 0 0;
     }
   }
   &:hover {
